--- a/css/style.css
+++ b/css/style.css
@@ -24,21 +24,22 @@ header{
 		margin-top: 20px;
 	}
 	.header-button{
+	width: 200px;
+    height: 50px;
 	display: inline-block;
 	text-decoration: none;
-    width: 200px;
-    height: 50px;
+	text-align: center;
     box-shadow: 10px 17px 34px 6px rgba(18, 61, 145, 0.83);
     border-radius: 50px;
     background-color: #ffffff;
     color: #072b6f;
     font-size: 18px;
     font-weight: 700;
-    padding: 17px, 55px,17px,55px;
-    /*padding-top: 17px;
+    /*padding: 17px, 55px, 17px, 55px;*/
+    padding-top: 17px;
     padding-right: 55px;
     padding-left: 55px;
-    padding-bottom: 17px;*/
+    padding-bottom: 17px;
     margin-top: 33px;
 	}
 	header small{
